--- a/applab.html
+++ b/applab.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <link href="asaisamf.css" type="text/css" rel="stylesheet"/>
+  <link href="applab1.css" type="text/css" rel="stylesheet"/>
   <script type= "application/javascript" src="https://d3js.org/d3.v5.min.js"></script> 
-  <script type= "application/javascript" src="asaisamf.js"></script>
+  <script type= "application/javascript" src="applab2.js"></script>
 </head>
 <body>
     <h1> Anime Films</h1>
